<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.token.tokenator.utilities.alert.GenericAlertViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:screenOrientation="portrait">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/close_privacy_policy"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/close"
                    android:clickable="true"
                    android:contentDescription="@string/close"
                    android:focusable="true"
                    android:onClick="@{() -> viewModel.dismissDialog()}"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/privacy_policy_text_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textColor="@color/blackish"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/close_privacy_policy"
                    tools:text="Privacy Policy" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/child_sub_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/children"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/blackish"
                    android:textSize="25sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacy_policy_text_header"
                    tools:text="Children" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/children_body_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/privacy_policy_children_body_text"
                    android:textAlignment="center"
                    android:textColor="@color/blackish"
                    android:textSize="20sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/child_sub_header" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/data_sub_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/data"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/blackish"
                    android:textSize="25sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/children_body_text"
                    tools:text="DATA" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/data_body_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/privacy_policy_data_message"
                    android:textAlignment="center"
                    android:textColor="@color/blackish"
                    android:textSize="20sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/data_sub_header" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
