<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.token.tokenator.ui.savedpassword.passworddetails.PasswordDetailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.savedpassword.passworddetails.PasswordDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/blackish">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:elevation="1dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/button_back"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/yellow"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:src="@drawable/ic_arrow_circle_left" />

                <TextView
                    style="@style/toolbar_titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="end"
                    android:text="@string/password_detail" />

            </androidx.appcompat.widget.Toolbar>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="@color/blackish">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name_label"
                    style="@style/section_labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/text_box"
                    app:boxBackgroundColor="@color/dark_gray"
                    app:boxStrokeColor="@color/text_input"
                    app:hintTextColor="@color/text_box"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/token_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_outline_label_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/grayish"
                        android:text="@{viewModel.token.title}"
                        android:textColor="@color/text_input"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_label"
                    style="@style/section_labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/outlinedTextField"
                    tools:text="Login" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/text_box"
                    app:boxBackgroundColor="@color/dark_gray"
                    app:boxStrokeColor="@color/text_input"
                    app:endIconDrawable="@drawable/ic_baseline_content_copy_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/grayish"
                    app:hintTextColor="@color/text_box"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/token_login_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic__login_24"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/grayish"
                        android:text="@{viewModel.token.login}"
                        android:textColor="@color/text_input"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/password_label"
                    style="@style/section_labels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_text_field"
                    tools:text="Password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/text_box"
                    app:boxBackgroundColor="@color/dark_gray"
                    app:boxStrokeColor="@color/text_input"
                    app:endIconDrawable="@drawable/ic_baseline_content_copy_24"
                    app:endIconMode="custom"
                    app:endIconTint="@color/grayish"
                    app:hintTextColor="@color/text_box"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/token_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_password_black_24dp"
                        android:drawablePadding="8dp"
                        android:text="@{viewModel.token.token}"
                        android:textColor="@color/text_input"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_update_password"
                    style="@style/main_button"
                    android:layout_marginTop="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/save_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_text_field"
                    tools:text="Save" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/ic_danger_circle"
                    android:visibility="@{viewModel.shouldShowWarning}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.018"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_update_password" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/outdated_password_message"
                    android:theme="@style/TextYellowInfo"
                    android:visibility="@{viewModel.shouldShowWarning}"
                    app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.034"
                    app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
                    app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
                    app:layout_constraintVertical_bias="0.404" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>

</layout>
